# bhada-alert

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  GETTING_STARTED.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_e2e.py  test_scraper.py  test_webhook.py
scripts/: health_check.py
scripts/systemd/: property-monitor.service
src/property_monitor/: __main__.py  config.py  logging_config.py
src/property_monitor/adapters/notifiers/: base.py  discord.py  telegram.py
src/property_monitor/adapters/scrapers/: __init__.py  base.py  erental_service.py  kotha_bhada.py  nepal_bazaar.py
src/property_monitor/adapters/storage/: base.py  sqlite_store.py
src/property_monitor/domain/: exceptions.py  models.py
src/property_monitor/services/: monitor_service.py
tests/: conftest.py
tests/unit/: test_models.py  test_scraper.py
